# asrle

./: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml  docker.yml
configs/: default.yaml
github/workflows/: release.yml
src/asrle/: config.py  logging.py  types.py
src/asrle/attribution/: fallback_word_attribution.py
src/asrle/backends/: api_generic.py  base.py  dummy.py  faster_whisper.py  hf_whisper.py  registry.py  streaming.py
src/asrle/cli/: app.py
src/asrle/contracts/: backend_contracts.py  streaming_contracts.py
src/asrle/core/: dataset_runner.py  drift.py  engine.py  error_attribution.py  flamegraph.py  metrics.py  moments.py  profiler.py  simulator.py  suggestions.py  word_attribution.py
src/asrle/core/alignment/: ctc.py  reconcile.py
src/asrle/core/streaming/: simulator.py
src/asrle/dashboard/: streamlit_app.py  webapp_actions.py  webapp_utils.py  webapp_views.py
src/asrle/reporting/: artifacts.py  dataset_summary.py  render.py  report.py  timeline.py
src/asrle/utils/: audio.py  io.py  text.py  time.py
tests/: test_backend_contracts_dummy.py  test_engine_dummy.py  test_metrics.py  test_registry.py  test_streaming_contracts_dummy.py
